Adding code for BlinkM over I2C

--- a/relays/Makefile
+++ b/relays/Makefile
@@ -5,6 +5,7 @@ ESP_HK_DEMO = ../esp-homekit-demo
 EXTRA_COMPONENTS = \
 	extras/http-parser \
 	extras/dhcpserver \
+	extras/i2c \
 	$(abspath $(ESP_HK_DEMO)/components/wifi_config) \
 	$(abspath $(ESP_HK_DEMO)/components/wolfssl) \
 	$(abspath $(ESP_HK_DEMO)/components/cJSON) \
@@ -13,7 +14,7 @@ EXTRA_COMPONENTS = \
 FLASH_SIZE ?= 8
 HOMEKIT_SPI_FLASH_BASE_ADDR ?= 0x7a000
 
-EXTRA_CFLAGS += -I.. -DHOMEKIT_SHORT_APPLE_UUIDS -DRELAYS -DNUM_RELAYS=4 -DWS2812 -DNUM_LEDS=124
+EXTRA_CFLAGS += -I.. -DHOMEKIT_SHORT_APPLE_UUIDS -DRELAYS -DNUM_RELAYS=4 -DWS2812 -DNUM_LEDS=124 -DBLINKM -DNUM_BLINKM=2
 
 LIBS ?= hal m
 
