Make it compile without WS2812. Will probably have to do the same on other source files (or find how this makefile works)

--- a/relays/Makefile
+++ b/relays/Makefile
@@ -14,7 +14,8 @@ EXTRA_COMPONENTS = \
 FLASH_SIZE ?= 8
 HOMEKIT_SPI_FLASH_BASE_ADDR ?= 0x7a000
 
-EXTRA_CFLAGS += -I.. -DHOMEKIT_SHORT_APPLE_UUIDS -DRELAYS -DNUM_RELAYS=4 -DWS2812 -DNUM_LEDS=124 -DBLINKM -DNUM_BLINKM=2
+EXTRA_CFLAGS += -I.. -DHOMEKIT_SHORT_APPLE_UUIDS -DRELAYS -DNUM_RELAYS=4 -DBLINKM -DNUM_BLINKM=2
+# -DWS2812 -DNUM_LEDS=124
 
 LIBS ?= hal m
 
